# sovereign-shadow-MEV

./: .dockerignore  .env.example  .gitignore  .instructions.md  Cargo.toml  Dockerfile  HIDDEN_ERRORS.md  README.md  README_INSTRUCTIONS.md  SOVEREIGN_SHADOW_ROADMAP.md  build.rs  count_rs_lines.bat  engine_bench.rs  flash_loan_executor.rs  foundry.toml  mempool_test.rs  package-lock.json  pub mod arbitrage_detector;.txt  system_bench.rs
contracts/: Executor.sol  SovereignShadowExecutor.sol  ZeroLossShield.yul
proto/: hydra.proto  shadow.proto
script/: DeployExecutor.s.sol
src/: ShadowBot.sol  Untitled-2.md  arbitrage_detector.rs  auditor.rs  bidding_engine.rs  bindings.rs  bundle_builder.rs  constants.rs  contract_audit.rs  discovery.rs  errors.rs  factory_scanner.rs  flash_loan_executor.rs  gas_feed.rs  ghost_protocol.rs  inventory_manager.rs  lib.rs  main.rs  math_engine.rs  mempool_listener.rs  models.rs  multicall.rs  nonce_manager.rs  p2p_engine.rs  profit_manager.rs  rpc_manager.rs  scout.rs  simulation_engine.rs  state_mirror.rs  state_simulator.rs  telemetry.rs  universal_decoder.rs  universal_decoder_helpers.rs  utils.rs  v3_math.rs
src/abi/: aave_v3_pool.json  balancer_v2_vault.json  uniswap_v2_factory.json  uniswap_v2_pair.json  uniswap_v3_factory.json  uniswap_v3_pool.json
test/: Executor.t.sol
