[package]
name = "the-sovereign-shadow"
version = "0.1.0"
edition = "2021"
default-run = "the-sovereign-shadow"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "ws", "abigen"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
anyhow = "1.0"
dashmap = "5.5"
tokio-stream = "0.1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
hex = "0.4"
revm = { version = "3.5", features = ["ethersdb", "std", "serde", "optional_balance_check", "optional_block_gas_limit", "optional_eip3607"] }
once_cell = "1.21.3"
hex-literal = "1.1.0"
rustc-hash = "2.1.0"
rayon = "1.8"
arrayvec = "0.7"
smallvec = "1.11"
parking_lot = "0.12.5"
arc-swap = "1.7.1"
bytes = "1.11.1"
colored = "3.1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
path = "engine_bench.rs"
harness = false

[[bin]]
name = "the-sovereign-shadow"
path = "src/main.rs"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1        # faster incremental builds
debug = true

[profile.test]
opt-level = 2
debug = true
