[package]
name = "the-sovereign-shadow"
version = "0.1.0"
edition = "2021"
default-run = "the-sovereign-shadow"

[dependencies]
alloy = { version = "0.3", features = ["full", "signer-local"] }
alloy-primitives = { version = "0.8", features = ["serde", "rlp"] }
alloy-sol-types = "0.8"

tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
dashmap = "5.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
revm = { version = "14.0", default-features = false, features = ["std", "optional_no_base_fee"] }
once_cell = "1.21.3"
rustc-hash = "1.1"
futures-util = "0.3"
arc-swap = "1.8.2"
bytes = { version = "1.11.1", features = ["serde"] }
k256 = "0.13"
secp256k1 = "0.27"
core_affinity = "0.8"
socket2 = "0.5"
sha3 = "0.10"
aes = "0.8"
ctr = "0.9"
futures = "0.3"
uuid = { version = "1.8", features = ["v4"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
phf = { version = "0.11", features = ["macros"] }

# Reth Dependencies for P2P Engine
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0" }
alloy-chains = "0.1"

[[bin]]
name = "the-sovereign-shadow"
path = "src/main.rs"

[[bin]]
name = "scout"
path = "src/scout.rs"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true
