[package]
name = "the-sovereign-shadow"
version = "0.1.0"
edition = "2021"
default-run = "the-sovereign-shadow"

[dependencies]
alloy = { version = "0.3", features = ["full", "signer-local"] }
alloy-primitives = { version = "0.8", features = ["serde", "rlp"] }
alloy-sol-types = "0.8"

tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = "0.1"
dashmap = "5.5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
revm = { version = "14.0", default-features = false, features = ["std", "optional_no_base_fee"] }
once_cell = "1.21.3"
rustc-hash = "1.1"
futures-util = "0.3"
futures = "0.3"
arc-swap = "1.8.2"
bytes = { version = "1.11.1", features = ["serde"] }
k256 = "0.13"
sha3 = "0.10"
phf = { version = "0.11", features = ["macros"] }
uuid = { version = "1.8", features = ["v4"] }
core_affinity = "0.8"
bincode = "1.3"

[[bin]]
name = "the-sovereign-shadow"
path = "src/main.rs"

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true
